{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 29,
  "lineage": "1768f133-65ad-6df3-9ced-9269fb5524e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:312696522114:instance/i-0f5b541340bd5b517",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5b541340bd5b517",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newlab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01555b97b00484caa",
            "private_dns": "ip-10-1-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.246",
            "public_dns": "ec2-44-204-178-85.compute-1.amazonaws.com",
            "public_ip": "44.204.178.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a78e959dd953d50e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0920b984d7499e468",
            "tags": {
              "Name": "MyEC2-1"
            },
            "tags_all": {
              "Name": "MyEC2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a3bc72c187e8ce3"
            ]
          },
          "dependencies": [
            "aws_subnet.PublicSunebts",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:312696522114:instance/i-0faa836881ce8e586",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faa836881ce8e586",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newlab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063bcd005fbe2f2df",
            "private_dns": "ip-10-1-2-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.234",
            "public_dns": "ec2-34-202-163-7.compute-1.amazonaws.com",
            "public_ip": "34.202.163.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00dcaabbfa6d9d5c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013ea30810dc81126",
            "tags": {
              "Name": "MyEC2-2"
            },
            "tags_all": {
              "Name": "MyEC2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a3bc72c187e8ce3"
            ]
          },
          "dependencies": [
            "aws_subnet.PublicSunebts",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:312696522114:instance/i-02419a76140f11438",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02419a76140f11438",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Newlab",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07fa8ebe36b4d878f",
            "private_dns": "ip-10-1-3-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.4",
            "public_dns": "ec2-54-198-75-167.compute-1.amazonaws.com",
            "public_ip": "54.198.75.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03df987cc7db01958",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b4c3ed649428af4",
            "tags": {
              "Name": "MyEC2-3"
            },
            "tags_all": {
              "Name": "MyEC2-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a3bc72c187e8ce3"
            ]
          },
          "dependencies": [
            "aws_subnet.PublicSunebts",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:internet-gateway/igw-0bdda07425118b274",
            "id": "igw-0bdda07425118b274",
            "owner_id": "312696522114",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:route-table/rtb-0f67f9252a4e82357",
            "id": "rtb-0f67f9252a4e82357",
            "owner_id": "312696522114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdda07425118b274",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route"
            },
            "tags_all": {
              "Name": "Public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db6151bfc95eabed",
            "route_table_id": "rtb-0f67f9252a4e82357",
            "subnet_id": "subnet-0920b984d7499e468"
          },
          "dependencies": [
            "aws_vpc.myvpc",
            "aws_internet_gateway.myigw",
            "aws_route_table.public-route",
            "aws_subnet.PublicSunebts"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066ee6da6f6f8aafb",
            "route_table_id": "rtb-0f67f9252a4e82357",
            "subnet_id": "subnet-013ea30810dc81126"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public-route",
            "aws_subnet.PublicSunebts",
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0190a6789fc23f878",
            "route_table_id": "rtb-0f67f9252a4e82357",
            "subnet_id": "subnet-00b4c3ed649428af4"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public-route",
            "aws_subnet.PublicSunebts",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:security-group/sg-09be21db4d48e19e2",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09be21db4d48e19e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mysg",
            "name_prefix": "",
            "owner_id": "312696522114",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSunebts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:subnet/subnet-0920b984d7499e468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0920b984d7499e468",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312696522114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSunebt-1"
            },
            "tags_all": {
              "Name": "PublicSunebt-1"
            },
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:subnet/subnet-013ea30810dc81126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013ea30810dc81126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312696522114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSunebt-2"
            },
            "tags_all": {
              "Name": "PublicSunebt-2"
            },
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:subnet/subnet-00b4c3ed649428af4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b4c3ed649428af4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312696522114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSunebt-3"
            },
            "tags_all": {
              "Name": "PublicSunebt-3"
            },
            "vpc_id": "vpc-047af2ba2388f7b3e"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312696522114:vpc/vpc-047af2ba2388f7b3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d9e207f3e65ae784",
            "default_route_table_id": "rtb-0f7cfa440a2b6dc25",
            "default_security_group_id": "sg-03a3bc72c187e8ce3",
            "dhcp_options_id": "dopt-01ac3f1089a15c679",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047af2ba2388f7b3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7cfa440a2b6dc25",
            "owner_id": "312696522114",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          }
        }
      ]
    }
  ]
}